# Problems

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  build_script.sh
Algorithm Practice/: CMakeLists.txt  Main.cpp  README.md
Algorithm Practice/Algorithms/: 0000-Test.cpp  0000-Test.h  0001-AddTwoNumbers.cpp  0001-AddTwoNumbers.h  0002-LongestCommonSubstr1Char.cpp  0002-LongestCommonSubstr1Char.h  0003-CoinChange.cpp  0003-CoinChange.h  0004-SmallestSubstrWithSameOrder.cpp  0004-SmallestSubstrWithSameOrder.h  0005-RotateRightByK.cpp  0005-RotateRightByK.h  0006-DaysUntilHotter.cpp  0006-DaysUntilHotter.h  0008-BuildBinaryTreeWithInorderAndPreorder.cpp  Algorithm.h  AlgorithmChooser.h  AlgorithmCollection.h  CMakeLists.txt
Algorithm Practice/DataStructures/: ArrayList.h  BinarySearchTree.h  CMakeLists.txt  DataStructureCollection.h  DoublyLinkedList.cpp  DoublyLinkedList.h
Algorithm Practice/Util/: Logger.h  (+2 more)
Algorithm Practise/: Algorithm.h  AlgorithmCollection.h  CMakeLists.txt  Logger.h  Main.cpp  Sum.cpp  Timer.h
Algorithms/: 0001-AddTwoNumbers.cpp  0001-AddTwoNumbers.h  0003-CoinChange.cpp  0003-CoinChange.h  0005-RotateRightByK.cpp  0005-RotateRightByK.h  0006-DaysUntilHotter.cpp  0007-MergeIntervals.cpp  0007-MergeIntervals.h  0008-BuildBinaryTreeWithInorderAndPreorder.h  Algorithm.h  AlgorithmChooser.h
DataStructures/: BinarySearchTree.h  BinaryTree.h  DoublyLinkedList.h
SampleInputs/: 0006-DaysUntilHotter.txt  0007-MergeIntervals.txt  0008-BuildBinaryTreeWithInorderAndPreorder.txt
Util/: CMakeLists.txt  FormatString.h  Timer.h  Utils.h
(+5 files in other folders)
